# cryptocurrency

./: .gitignore  Cargo.toml
.circleci/: config.yml
examples/: create-wallet-1.json  create-wallet-2.json  create-wallet-3.json  transfer-funds.json
src/: crypta.rs  lib.rs
src/network/: mod.rs
tests/: api.rs  error_messages.rs  tx_logic.rs
timestamp_service/: Cargo.toml  Dockerfile  README.md  config.toml
timestamp_service/examples/: create_timestamp.json  demo.rs
timestamp_service/src/: lib.rs
