[package]
name = "exonum-cryptocurrency"
version = "0.6.0"
authors = ["The Exonum Team <exonum@bitfury.com>"]
repository = "https://github.com/exonum/exonum"
readme = "README.md"
license = "Apache-2.0"

[badges]
travis-ci = { repository = "exonum/exonum" }

[dependencies]
exonum = "0.6.0"
iron = "0.6.0"
bodyparser = "0.8.0"
router = "0.6.0"
serde = "1.0.0"
serde_json = "1.0.0"
serde_derive = "1.0.0"
exonum-time = "0.6.0"

[dev-dependencies]
exonum-testkit = "0.5.0"
rand = "0.4"

[dependencies.timestamp_service]
path = "timestamp_service"

[[bin]]
name = "crypta"
path = "src/crypta.rs"